fix style missing of reviews#new on mobile

--- a/app/assets/stylesheets/views/things.css.scss
+++ b/app/assets/stylesheets/views/things.css.scss
@@ -5,6 +5,7 @@ html.things_show,
 html.things_activities,
 html.reviews_index,
 html.reviews_show,
+html.reviews_new,
 html.feelings_index,
 html.feelings_show {
   /**********************************************.btn**********************************************/
